--- a/index.html
+++ b/index.html
@@ -374,22 +374,22 @@
     <section id="gallery" class="gallery-section">
         <h2>Gallery</h2>
         <div class="gallery-images">
-            <img src="C:\Users\leads\Desktop\PRIME\IMG_4539.JPG" alt="Gallery Image 1">
-            <img src="C:\Users\leads\Desktop\PRIME\IMG_4540.JPG" alt="Gallery Image 2">
-            <img src="C:\Users\leads\Desktop\PRIME\leads mission.jpg" alt="Gallery Image 3">
-            <img src="C:\Users\leads\Desktop\PRIME\guitar.JPG" alt="Gallery Image 1">
-            <img src="C:\Users\leads\Desktop\PRIME\bobo.JPG" alt="Gallery Image 1">
-            <img src="C:\Users\leads\Desktop\PRIME\squad.JPG" alt="Gallery Image 1">
-            <img src="C:\Users\leads\Desktop\PRIME\animal.JPG" alt="Gallery Image 3">
-            <img src="C:\Users\leads\Desktop\PRIME\maze.JPG" alt="Gallery Image 1">
-            <img src="C:\Users\leads\Desktop\PRIME\zion avenue logo0001.png" alt="Gallery Image 1">
-            <img src="C:\Users\leads\Desktop\PRIME\bird2.JPG" alt="Gallery Image 2">
-            <img src="C:\Users\leads\Desktop\PRIME\fire.JPG" alt="Gallery Image 1">
-            <img src="C:\Users\leads\Desktop\PRIME\lights.JPG" alt="Gallery Image 1">
-            <img src="C:\Users\leads\Desktop\PRIME\pick.JPG" alt="Gallery Image 1">
-            <img src="C:\Users\leads\Desktop\PRIME\squad2.JPG" alt="Gallery Image 1">
-            <img src="C:\Users\leads\Desktop\PRIME\candles.PNG" alt="Gallery Image 1">
-            <img src="C:\Users\leads\Desktop\PRIME\bitcoin.JPG" alt="Gallery Image 1">
+            <img src="IMG_4539.JPG" alt="Gallery Image 1">
+            <img src="IMG_4540.JPG" alt="Gallery Image 2">
+            <img src="leads mission.jpg" alt="Gallery Image 3">
+            <img src="guitar.JPG" alt="Gallery Image 1">
+            <img src="bobo.JPG" alt="Gallery Image 1">
+            <img src="squad.JPG" alt="Gallery Image 1">
+            <img src="animal.JPG" alt="Gallery Image 3">
+            <img src="maze.JPG" alt="Gallery Image 1">
+            <img src="zion avenue logo0001.png" alt="Gallery Image 1">
+            <img src="bird2.JPG" alt="Gallery Image 2">
+            <img src="fire.JPG" alt="Gallery Image 1">
+            <img src="lights.JPG" alt="Gallery Image 1">
+            <img src="pick.JPG" alt="Gallery Image 1">
+            <img src="squad2.JPG" alt="Gallery Image 1">
+            <img src="candles.PNG" alt="Gallery Image 1">
+            <img src="bitcoin.JPG" alt="Gallery Image 1">
 
             <!-- More images... -->
         </div>
