--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 
     <!-- Artist Profile Section -->
     <section class="artist-profile">
-        <img src="C:\Users\leads\Desktop\PRIME\zion avenue logo0001.png" alt="Kefra Profile Picture">
+        <img src="zion avenue logo0001.png" alt="Kefra Profile Picture">
         <h2>Kefra</h2>
         <p>Multi-genre music artist creating unique soundscapes. Passionate about storytelling through music.</p>
         <div class="social-icons">
