--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
 
         /* Header Styles */
         header {
-            background: linear-gradient(135deg, #ff5c8d, #7a44d1);
+            background: linear-gradient(135deg, #534c64, #0d2e05);
             color: #fff;
             padding: 60px 0;
+            border-radius: 15px; 
             text-align: center;
             box-shadow: 0 4px 40px rgba(0, 0, 0, 0.3);
             position: relative;
@@ -51,7 +52,7 @@
             position: relative;
             display: inline-block;
             padding: 10px 20px;
-            background: -webkit-linear-gradient(#fff, #ffcc00);
+            background: -webkit-linear-gradient(#292424, #070707);
             -webkit-background-clip: text;
             color: transparent;
             animation: textAnimation 1.5s ease-in-out infinite alternate;
@@ -83,7 +84,7 @@
             font-weight: bold;
             text-transform: uppercase;
             font-size: 1.2rem;
-            letter-spacing: 2px;
+            letter-spacing: 1.5px;
             transition: color 0.3s ease, transform 0.3s ease;
         }
 
@@ -99,6 +100,11 @@
             align-items: center;
             flex-direction: column;
             padding: 40px;
+            background-image: url('CRANES.JPG'); /* Add your background image here */
+            background-size: cover; /* Make the image cover the whole section */
+            background-position: center; /* Center the image */
+            border-radius: 15px; /* Optional: to have rounded corners */
+            box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3); /* Optional: shadow effect */
         }
 
         .artist-profile img {
@@ -111,20 +117,20 @@
         }
 
         .artist-profile h2 {
-            font-size: 2.5rem;
-            color: #ffcc00;
+            font-size: 4.5rem;
+            color: #fad749;
             margin-bottom: 10px;
         }
 
         .artist-profile p {
             font-size: 1.2rem;
-            color: #ddd;
+            color: #fafafa;
             margin-bottom: 20px;
         }
 
         .social-icons {
             font-size: 1.5rem;
-            margin: 10px 0;
+            margin: 15px 0;
         }
 
         .social-icons a {
@@ -140,11 +146,12 @@
 
         /* Music Library Section */
         .music-library {
-            padding: 60px 0;
+            padding: 40px 0;
             background: rgba(168, 155, 155, 0.1);
             border-radius: 15px;
             box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3);
-            margin-bottom: 40px;
+            background-image: url('gor.jpg'); /* Add your background image here */
+            margin-bottom: 20px;
         }
 
         .music-library h2 {
@@ -177,12 +184,12 @@
 
         .track h3 {
             font-size: 1.5rem;
-            color: #46664c;
+            color: #487250;
             margin-bottom: 15px;
         }
 
         .track audio {
-            width: 100%;
+            width: 80%;
             border-radius: 5px;
         }
 
@@ -216,26 +223,30 @@
 
         /* Gallery Section */
         #gallery {
-            padding: 60px 0;
+            background-image: url('lights.JPG'); /* Add your background image here */
+            padding: 40px 0;
+            border-radius: 15px; /* Optional: to have rounded corners */
+            box-shadow: 0 10px 50px rgba(0, 0, 0, 0.3); /* Optional: shadow effect */
         }
 
         #gallery h2 {
             text-align: center;
-            color: #ffcc00;
-            font-size: 2.5rem;
+            color: #131312;
+            font-size: 3.5rem;
             margin-bottom: 30px;
         }
 
         .gallery-images {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            grid-template-columns: repeat(3, 1fr); /* Three columns for initial images */
             gap: 15px;
             margin-top: 20px;
         }
 
         .gallery-images img {
-            max-width: 100%;
-            height: auto;
+            width: 100%;
+            height: 250px; /* Set fixed height for uniformity */
+            object-fit: cover;
             border-radius: 10px;
             transition: transform 0.3s ease;
         }
@@ -247,15 +258,16 @@
         /* Contact Form Section */
         #contact {
             padding: 60px 0;
-            background: rgba(255, 255, 255, 0.1);
+            background: rgba(200, 200, 255, 0.1);
             border-radius: 15px;
             box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3);
+            background-image: url('fire.JPG'); /* Add your background image here */
             margin-bottom: 40px;
         }
 
         #contact h2 {
             text-align: center;
-            color: #ffcc00;
+            color: #ff9900;
             font-size: 2.5rem;
             margin-bottom: 30px;
         }
@@ -310,10 +322,10 @@
             display: block;
             margin: 20px auto;
             padding: 10px 20px;
-            background-color: #ffcc00;
+            background-color: #ee9623;
             border: none;
             color: #000;
-            font-size: 1.2rem;
+            font-size: 1rem;
             border-radius: 5px;
             cursor: pointer;
             transition: background-color 0.3s ease;
@@ -335,7 +347,6 @@
         <h1>Kefra Music</h1>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
                 <li><a href="#music-library">Music</a></li>
                 <li><a href="#gallery">Gallery</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -347,12 +358,13 @@
     <section class="artist-profile">
         <img src="zion avenue logo0001.png" alt="Kefra Profile Picture">
         <h2>Kefra</h2>
-        <p>Multi-genre music artist creating unique soundscapes. Passionate about storytelling through music.</p>
+        <p>Multi-genre music artist, producer and writer.</p>
         <div class="social-icons">
             <a href="https://www.facebook.com/kefra" target="_blank" class="fab fa-facebook-f" aria-label="Facebook"></a>
-            <a href="https://www.twitter.com/kefra" target="_blank" class="fab fa-twitter" aria-label="Twitter"></a>
+            <a href="https://www.twitter.com/kefra" target="_blank" class="fab fa-twitter" aria-label="twitter"></a>
             <a href="https://www.instagram.com/simon_kefra?igsh=MWk2eGs3aTF5cms0MQ%3D%3D&utm_source=qr" target="_blank" class="fab fa-instagram" aria-label="Instagram"></a>
             <a href="https://www.youtube.com/channel/UCTZUjLAcr-VsBulu_raVYsw" target="_blank" class="fab fa-youtube" aria-label="YouTube"></a>
+            
         </div>
     </section>
 
@@ -360,25 +372,18 @@
     <section id="gallery">
         <h2>Gallery</h2>
         <div class="gallery-images">
-            <img src="IMG_4539.JPG" alt="Gallery Image 1">
-            <img src="IMG_4540.JPG" alt="Gallery Image 2">
-            <img src="leads mission.jpg" alt="Gallery Image 3">
-            <img src="guitar.JPG" alt="Gallery Image 4">
+            <img src="pick.JPG" alt="Gallery Image 4">
+            <img src="guitar.JPG" alt="Gallery Image 6">
+            <img src="stage.JPG" alt="Gallery Image 2">
         </div>
         <div class="more-images">
             <div class="gallery-images">
-                <img src="bobo.JPG" alt="Gallery Image 5">
-                <img src="squad.JPG" alt="Gallery Image 6">
-                <img src="animal.JPG" alt="Gallery Image 7">
-                <img src="maze.JPG" alt="Gallery Image 8">
-                <img src="zion avenue logo0001.png" alt="Gallery Image 9">
-                <img src="bird2.JPG" alt="Gallery Image 10">
-                <img src="fire.JPG" alt="Gallery Image 11">
-                <img src="lights.JPG" alt="Gallery Image 12">
-                <img src="pick.JPG" alt="Gallery Image 13">
-                <img src="squad2.JPG" alt="Gallery Image 14">
-                <img src="candles.PNG" alt="Gallery Image 15">
-                <img src="bitcoin.JPG" alt="Gallery Image 16">
+                <img src="lambat.JPG" alt="Gallery Image 1">
+                <img src="leads mission.jpg" alt="Gallery Image 3">
+                <img src="maze.JPG" alt="Gallery Image 5">
+                <img src="squad2.JPG" alt="Gallery Image 9">
+                <img src="squad.JPG" alt="Gallery Image 7">
+                <img src="candles.PNG" alt="Gallery Image 8">
             </div>
         </div>
         <button class="toggle-button" id="toggle-button">Show More</button>
@@ -391,12 +396,12 @@
         <div class="tracks">
             <!-- Track 1 -->
             <div class="track">
-                <h3>Majesty</h3>
+                <h3>Nkomawo</h3>
                 <audio controls>
-                    <source src="C:\\Users\\leads\\Desktop\\PRIME\\kefra - Majesty.mp3" type="audio/mp3">
+                    <source src="kefra-Nkomawo.mp3" type="audio/mp3">
                     Your browser does not support the audio element.
                 </audio>
-                <button class="payment-button" onclick="processPayment('Majesty', 1500)">
+                <button class="payment-button" onclick="processPayment('Nkomawo', 1500)">
                     <i class="fas fa-shopping-cart"></i> Buy Now
                 </button>
             </div>
@@ -427,12 +432,12 @@
 
             <!-- Track 4 -->
             <div class="track">
-                <h3>Nkomawo</h3>
+                <h3>Zukuka</h3>
                 <audio controls>
-                    <source src="Kefra - Nkomawo.mp3" type="audio/mp3">
+                    <source src="Kefra - Zukuka.mp3" type="audio/mp3">
                     Your browser does not support the audio element.
                 </audio>
-                <button class="payment-button" onclick="processPayment('Nkomawo', 1500)">
+                <button class="payment-button" onclick="processPayment('Zukuka', 1500)">
                     <i class="fas fa-shopping-cart"></i> Buy Now
                 </button>
             </div>
@@ -480,7 +485,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 Kefra Music. All rights reserved.</p>
+        <p>© 2025 Kefra Music. All rights reserved.</p>
     </footer>
 
     <script>
@@ -497,7 +502,7 @@
         });
 
         async function processPayment(trackName, amount) {
-            const email = "simonkefra@gmail.com"; // Hardcoded email for now, consider user input for production
+            const email = "email"; // Hardcoded email for now, consider user input for production
             const phoneNumber = prompt("Please enter your phone number:"); // Capture mobile number
             if (!phoneNumber) {
                 alert("Payment cancelled.");
@@ -511,14 +516,14 @@
                 tx_ref: `MC-${Math.random().toString(36).substring(2, 15)}`, // Generate random transaction reference
                 order_id: `USS_${Math.random().toString(36).substring(2, 15)}`,
                 fullname: "ssengendo simon", // Hardcoded name, consider user input for production
-                phone_number: phoneNumber,
+                phone_number:phone_number,
                 client_ip: "192.168.1.1", // Placeholder IP for local testing
                 device_fingerprint: "62wd23423rq324323qew1", // Sample value, consider generating dynamically
                 meta: {
                     flightID: "123949494DC",
                     sideNote: "Payment for " + trackName
                 },
-                redirect_url: "https://your_redirect_url_here" // Set a proper redirect URL
+                redirect_url: "https://rave-webhook.herokuapp.com/receivepayment" // Set a proper redirect URL
             };
 
             try {
@@ -576,10 +581,9 @@
                 status.innerHTML = "Oops! There was a problem submitting your form";
             });
         }
-        
+
         form.addEventListener("submit", handleSubmit);
     </script>
-
 </body>
 
 </html>
